# ar4-examples

./: README.md
ar4_pick_and_place_examples/: COMPLETE.md  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  package.xml  setup.cfg  setup.py
ar4_pick_and_place_examples/ar4_pick_and_place_examples/: __init__.py  gripper_controller.py  pick_place_controller.py  simple_pick_place_demo.py
ar4_pick_and_place_examples/ar4_pick_and_place_examples/utils/: __init__.py
ar4_pick_and_place_examples/config/: pick_place_params.yaml
