<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar4_pick_and_place_examples</name>
  <version>0.1.0</version>
  <description>Vision-based pick-and-place examples for the AR4 robot with MoveIt 2 and Isaac Sim</description>
  
  <maintainer email="yaguan@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  
  <author email="yaguan@example.com">Your Name</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <!-- TF2 dependencies -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Vision dependencies -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- AR4 specific dependencies -->
  <depend>ar4_moveit_config</depend>
  <depend>ar4_isaac</depend>
  <depend>ar4_description</depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
